REACT_PROJECT/blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments

  template:
    metadata:
      labels:
        app: comments

    spec:
      containers:
      - name: comments

        image: shreyashjain/comments
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name : comment-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
