REACT_PROJECT/blog/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts

  template:
    metadata:
      labels:
        app: posts

    spec:
      containers:
      - name: posts

        image: shreyashjain/posts
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"


---

apiVersion: v1
kind: Service
metadata:
  name : post-clusterip-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
